--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -98,6 +98,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="3l4-ZX-Gmt">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="2vF-PV-YRg" id="TGI-UH-lpK"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="questionCell" rowHeight="100" id="bCr-2z-dpc" customClass="QuestionsTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
@@ -198,6 +206,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addQuestion" destination="2FM-gE-IYr" id="zIK-8P-cPY"/>
+                        <outlet property="searchDisplayController" destination="AMm-jU-lj0" id="cme-be-lc3"/>
                         <outlet property="sidebarButton" destination="wxV-oX-zhg" id="eJ1-qO-XHG"/>
                         <segue destination="L2G-jD-e0s" kind="presentation" identifier="showQuestionForm" id="Zma-F1-cBs"/>
                         <segue destination="8TF-aP-r7l" kind="show" identifier="showAnswersListForQuestion" id="1uy-uL-sgR"/>
@@ -205,6 +214,15 @@
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YUx-wJ-w8j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="AMm-jU-lj0">
+                    <connections>
+                        <outlet property="delegate" destination="2vF-PV-YRg" id="ZnF-c6-XiH"/>
+                        <outlet property="searchBar" destination="3l4-ZX-Gmt" id="3x4-O5-b1s"/>
+                        <outlet property="searchContentsController" destination="2vF-PV-YRg" id="A9d-cq-gUN"/>
+                        <outlet property="searchResultsDataSource" destination="2vF-PV-YRg" id="MM0-UP-xvv"/>
+                        <outlet property="searchResultsDelegate" destination="2vF-PV-YRg" id="zvh-uU-GAg"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="614" y="363"/>
         </scene>
