--- a/StackQA/ru.lproj/Main.storyboard
+++ b/StackQA/ru.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JPW-mY-QYy">
                                 <rect key="frame" x="484" y="27" width="100" height="30"/>
-                                <state key="normal" title="Save">
+                                <state key="normal" title="Сохранить">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -36,14 +36,14 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y4w-Oq-nAs">
                                 <rect key="frame" x="16" y="27" width="55" height="30"/>
-                                <state key="normal" title="Cancel">
+                                <state key="normal" title="Отмена">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="hideForm:" destination="L2G-jD-e0s" eventType="touchUpInside" id="uy0-w5-eMn"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" text="Question text" translatesAutoresizingMaskIntoConstraints="NO" id="QPr-7g-SDj">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" text="Текст вопроса" translatesAutoresizingMaskIntoConstraints="NO" id="QPr-7g-SDj">
                                 <rect key="frame" x="16" y="196" width="288" height="460"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
